# kde-shader-wallpaper

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVREADME.md  PKGBUILD  Plasma5_README.md  README.md  README_DEV.md  ShaderCompiler.py  ShaderProcessor.py  metadata.desktop  shader.frag
.github/: FUNDING.yml
contents/config/: main.xml
contents/ui/: child.qml  config.qml  main.qml
contents/ui/Comp/: FPSItem.qml  ShaderEngine.qml  TShaderToy.qml
contents/ui/Components/: FPSItem.qml  GUIButton.qml  ImageBtn.qml  PlayBtn.qml  Settings.qml  ShaderCustomizer.qml  ShaderEngine.qml  Timers.qml
contents/ui/Shader/: Shader_2D_Clouds.qml  Shader_4ddfWX.qml  Shader_Abstract.qml  Shader_Abstract_Glassy_Field.qml  Shader_Abstract_Plane.qml  Shader_Biomine.qml  Shader_Booting.qml  Shader_Circuits.qml  Shader_Color_Grid.qml  Shader_CoreEngine.qml  Shader_Cosmic_Cycles.qml  Shader_Crazy_Springs.qml  Shader_Crazy_Waves.qml  Shader_Creation.qml  Shader_Cylintrically_Mapped_Hexagons.qml  Shader_DNA_Tracer.qml  Shader_Day_79.qml  Shader_Earthbound.qml  Shader_Earthbound2.qml  Shader_Earthbound3.qml  Shader_Earthbound4.qml  Shader_Earthbound5.qml  Shader_Electric_Sinusoid.qml  Shader_Fast_Ocean.qml  Shader_Fireworks.qml  Shader_Floating_Color_Bubbles.qml  Shader_Fovea.qml  Shader_Fractal_Flythrough.qml  Shader_Fractal_Tiling.qml  Shader_Galaxy_Spirals.qml  Shader_Geodesic_Tiling.qml  Shader_Gibson.qml  Shader_Grid_Landscape.qml  Shader_Hyper_Tunnel.qml  Shader_Hyperspace_Travel.qml  Shader_Hypnoferromagnetism.qml  Shader_IO.qml  Shader_Id3Gz2.qml  Shader_Impact.qml  Shader_Infinite_Pinballs.qml  (+51 more)
contents/ui/Shaders/: 1993.frag  Abstract_Plane.frag  Auroras.frag  Channel_Soup.frag  CloudTen.frag  Cloud_Crystal.frag  Corridor_Travel.frag  Crazy_Waves.frag  Creation.frag  CrumpledWave.frag  Curvature.frag  DNA_Tracer.frag  DVD_Bounce.frag  Deformed_Bubbles.frag  Descent3D.frag  E1M1.frag  Earthbound2.frag  Earthbound3.frag  Earthbound4.frag  Ether.frag  Fast_FBM.frag  Fast_Ocean.frag  Fractal111Gaz.frag  Fractal_Flythrough.frag  Glow_City.frag  HappyJumping.frag  Heartfelt.frag  Hyper_Tunnel.frag  IFS.frag  Impact.frag  Infinite_Pinballs.frag  Interstellar.frag  Invaders.frag  Journey.frag  Kifings_Tubes.frag  Kirby.frag  Laserworld.frag  Liberation.frag  Local_PixelZoom.frag  Luminescence.frag  (+65 more)
contents/ui/Views/: TimeWindow.qml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
docs/superpowers/specs/: 2026-05-25-phase1-dev-harness-and-critical-bugs-design.md
package/: metadata.json
package/contents/config/: main.xml
package/contents/scripts/: build.sh  install-plm-greeter.sh
package/contents/ui/: ConfigContent.qml  GalleryView.qml  ImportDialog.qml  MouseTrackerArea.qml  PerformanceWidget.qml  PresetPanel.qml  SetupWizard.qml  ShaderCard.qml  ShaderSystem.qml  ShaderTweaksPanel.qml  WindowModel.qml  _waves.frag  _waves.frag.qsb  clouds.frag  clouds.frag.qsb  config.qml  main.qml  shader.frag  shader.frag.qsb  shader.vert  shader_index.json  waves.frag  waves.frag.qsb
package/contents/ui/Components/: MouseAreaTracker.qml  ShaderEngine.qml
package/contents/ui/Shaders/: 002-Blue.frag  2D_Clouds.frag  3D_Clouds.frag  Abstract_Glassy_Field.frag  Abstract_Liquid.frag  Abstract_Patterns6.frag  Abstract_Plane.frag  Abstract_Terrain.frag  AlienVoxel.frag  Anaglyph_Sketch.frag  Base_Warp.frag  Biomine.frag  BoringDots.frag  Bouncing_Circle.frag  CineShader_Lava.frag  Circuits.frag  City_Flythrough.frag  Cloud_Fairies.frag  Color_Grid.frag  Colorful_Lens.frag  CoreEngine.frag  Cosmic_Cycles.frag  Craziness.frag  Crazy_Springs.frag  CubeLines.frag  Cubic_Dispersal.frag  Cylintrically_Mapped_Hexagons.frag  Day_79.frag  Descent.frag  Dez.frag  Digital_Rain.frag  Dodecaplex.frag  Earthbound.frag  Earthbound2.frag  Electric_Sinusoid.frag  Emissive_Ikura.frag  Endless_Creature.frag  Exit_the_matrix.frag  Fireworks.frag  Flickering_Stars.frag  (+100 more)
package/contents/ui/Shaders6/: AI_NotIncluded.frag.qsb  Abstract_Glassy_Field.frag.qsb  Abstract_Liquid.frag.qsb  Abstract_Patterns6.frag.qsb  Abstract_Plane.frag.qsb  Auroras.frag.qsb  Balatro.frag.qsb  BalatroSmooth.frag.qsb  BalatroSmoothWider.frag.qsb  Base_Warp.frag.qsb  Biomine.frag.qsb  Booting.frag.qsb  BoringDots.frag.qsb  Bottom_of_Water.frag.qsb  Bouncing_Circle.frag.qsb  Channel_Soup.frag.qsb  Coastal_Dream.frag.qsb  Color_Grid.frag.qsb  Colorful_FBM.frag.qsb  Colorful_Lens.frag.qsb  Computers_MadeForCubes.frag.qsb  Cosmic_Cycles.frag.qsb  Craziness.frag.qsb  Creation.frag.qsb  CrumpledWave.frag.qsb  CubeLines.frag.qsb  DVD.frag.qsb  Day_74.frag.qsb  Descent3D.frag.qsb  Dez.frag.qsb  Digital_Rain.frag.qsb  Discoteq_2.frag.qsb  Domain_Warping.frag.qsb  E1M1.frag.qsb  Earthbound.frag.qsb  Earthbound2.frag.qsb  Earthbound3.frag.qsb  ElectricEel_Universe.frag.qsb  Electric_Sinusoid.frag.qsb  Endless_Creature.frag.qsb  (+90 more)
package/contents/ui/Shaders6Originals/: Digital_Rain.frag  E1M1.frag  Earthbound.frag  Earthbound2.frag  Earthbound3.frag  Light_Clock.frag  Paint_Archipelago.frag  Space_Curvature.frag  Wolfenstein.frag  clock.frag  dvd.frag  kalaidoscope.frag  ps3menu.frag  shader.frag  (+3 more)
scripts/: build.sh  dev-reset.sh  dev.sh  enable-plm-greeter.sh  install-plm-greeter.sh  migrate_shaders.py
scripts/dev/: DevHarness.qml
src/: CMakeLists.txt  qmldir.in
src/core/: performancemonitor.cpp  performancemonitor.h  shaderbuffer.cpp  shaderbuffer.h  shadercompiler.cpp  shadercompiler.h  shaderengine.cpp  shaderengine.h  uniformmanager.cpp  uniformmanager.h
src/data/: plmgreetersetup.cpp  plmgreetersetup.h  presetmanager.cpp  presetmanager.h  shaderlibrary.cpp  shaderlibrary.h  shadermetadata.cpp  shadermetadata.h
src/import/: shaderconverter.cpp  shaderconverter.h  shadertoyapi.cpp  shadertoyapi.h
src/input/: audiocapture.cpp  audiocapture.h  cursortracker.cpp  cursortracker.h  virtualdesktopwatcher.cpp  virtualdesktopwatcher.h  windowtracker.cpp  windowtracker.h
src/models/: categorymodel.cpp  categorymodel.h  shaderlistmodel.cpp  shaderlistmodel.h
src/plugin/: shaderwallpaperplugin.cpp  shaderwallpaperplugin.h
src/qml/: PluginStatus.qml
(+119 files in other folders)
